# legend-keeper-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN-draft-editing-tools.md  DESIGN-load-draft.md  DESIGN.md  PRINCIPLES.md  README.md  TODO.md
.beads/: .beads-credential-key  config.yaml  metadata.json
src/: lib.rs  main.rs  server.rs
src/lk/: board_gen.rs  builder.rs  io.rs  mod.rs  schema.rs  store.rs
src/prosemirror/: from_markdown.rs  mod.rs  to_markdown.rs  types.rs
tests/: builder.rs  deserialize.rs  prosemirror.rs  store.rs
