[package]
name = "legend-keeper-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
flate2 = "1"
sha2 = "0.10"
notify = "7"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
comrak = "0.35"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

[dev-dependencies]
tempfile = "3"
